WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274668
[WGSL] textureGather is missing validation
https://bugs.webkit.org/show_bug.cgi?id=274668
Summary
[WGSL] textureGather is missing validation
Tadeu Zagallo
Reported
2024-05-24 11:12:24 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-05-24 11:12:33 PDT
<
rdar://problem/128664891
>
Tadeu Zagallo
Comment 2
2024-05-24 11:13:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29066
EWS
Comment 3
2024-05-27 03:35:19 PDT
Committed
279345@main
(8f05ced05e3d): <
https://commits.webkit.org/279345@main
> Reviewed commits have been landed. Closing PR #29066 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug