[WGSL] textureGather is missing validation https://bugs.webkit.org/show_bug.cgi?id=274668 rdar://128664891

Reviewed by Mike Wyrzykowski.

We were missing the validation that when the first argument to `textureGather`
is the integer "component" argument, it must be a constant value between 0 and 3.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
* Source/WebGPU/WGSL/tests/invalid/texture-gather.wgsl: Added.

Canonical link: https://commits.webkit.org/279345@main